
= release 3.5.2

  - #271 (E#21) sudoers file incorrect.

= release 3.5.1
Thu Feb 14 08:36:24 CET 2019

  - #241 Profile generation dies when distribution in /home/taranis
  - #266 Analysis open crashes list on the background
  - #269 (E#19) 3da4d262 at install

= release 3.5.0
  Fri Jan 18 13:29:24 CET 2019

Please see the wiki for more details and upgrade instructions.
https://github.com/NCSC-NL/taranis3/wiki

Bugfixes are discussed in the issues in GitHUB.  This file only lists
substantial changes.  The public wiki provides more details on the
changes and fixes.

Changes (since 3.4.0)
  - Upgrade license from EUPL 1.1 to EUPL 1.2
  - Change the way that copyright and license is included in the code.
  - Remove personal names from the code.
  - Rename 'taranis specint send-reminders' to 'taranis send specint-reminders'

Improvements: (since 3.4.x)
  - add 'taranis send year-stats'
  - add 'taranis db remove-items'
  - add 'taranis db schema-version'
  - add 'taranis install --remove'
  - add reply-to header to publications
  - add assess page short-cut '!'
  - advisory print preview contains advisory matrix
  - full rewrite of search
  - many, many small bugfixes and small features